--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
   <!-- UI Panel -->
   <div class="game-panel">
     <h1>🏙️ Idle City</h1>
@@ -13,11 +14,13 @@
     <p>🏠 Houses: <span id="houses">0</span></p>
     <p>🏭 Factories: <span id="factories">0</span></p>
     <p>🏪 Shops: <span id="shops">0</span></p>
+    <p>🌳 Parks: <span id="parks">0</span></p>
 
     <button id="workBtn">💼 Work</button>
     <button id="buyHouse">Buy House (10)</button>
     <button id="buyFactory">Buy Factory (50)</button>
     <button id="buyShop">Buy Shop (100)</button>
+    <button id="buyPark">Buy Park (30)</button>
     <button id="resetBtn">Reset Game</button>
   </div>
 
@@ -27,6 +30,7 @@
     <div class="cloud cloud1"></div>
     <div class="cloud cloud2"></div>
     <div id="buildings"></div>
+    <div class="map"></div>
     <div class="ground"></div>
   </div>
 
