Refactor HTML structure and update HUD

--- a/index.html
+++ b/index.html
@@ -1,42 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Idle City Builder</title>
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<title>Idle City Builder</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <!-- UI Panel -->
-  <div class="game-panel">
-    <h1>🏙️ Idle City</h1>
-    <p>💰 Money: <span id="money">0</span></p>
-    <p>🏠 Houses: <span id="houses">0</span></p>
-    <p>🏭 Factories: <span id="factories">0</span></p>
-    <p>🏪 Shops: <span id="shops">0</span></p>
-    <p>🌳 Parks: <span id="parks">0</span></p>
+<!-- Modern HUD -->
+<div class="hud">
+  <div class="money-display">💰 <span id="money">0</span></div>
+  <button id="workBtn">💼 Work</button>
+</div>
 
-    <button id="workBtn">💼 Work</button>
-    <button id="buyHouse">Buy House (10)</button>
-    <button id="buyFactory">Buy Factory (50)</button>
-    <button id="buyShop">Buy Shop (100)</button>
-    <button id="buyPark">Buy Park (30)</button>
-    <button id="resetBtn">Reset Game</button>
-  </div>
+<!-- 2D City -->
+<div class="city">
+  <div class="sky"></div>
+  <div class="terrain"></div>
+  <div class="buildings-container" id="buildings"></div>
+  <div class="cloud cloud1"></div>
+  <div class="cloud cloud2"></div>
+</div>
 
-  <!-- 2D City -->
-  <div class="city">
-    <div class="sky"></div>
-    <div class="cloud cloud1"></div>
-    <div class="cloud cloud2"></div>
-    <div id="buildings"></div>
-    <div class="map"></div>
-    <div class="ground"></div>
-  </div>
+<audio id="clickSound" src="sounds/click.mp3"></audio>
+<audio id="buildSound" src="sounds/build.mp3"></audio>
 
-  <audio id="clickSound" src="sounds/click.mp3"></audio>
-  <audio id="buildSound" src="sounds/build.mp3"></audio>
-
-  <script src="script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
+
