Add reset button to HUD in index.html

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <!-- HUD -->
 <div class="hud">
   💰 <span id="money">0</span>
+  <button id="resetBtn">🔄 Reset Game</button>
 </div>
 
 <!-- City -->
 <div class="city">
-  <div class="sky"></div>
   <div class="terrain"></div>
   <div class="buildings-container" id="buildings"></div>
 </div>
